# litex

./: .gitignore  Cargo.toml  README.md  example_parse.dot  grammar.ebnf  pyproject.toml
example/: from.litex
litex/: base.litex  cli.py  litex.py
litex.bak/: cli.py  litex.py
src/: data.rs  emit.rs  main.rs  parse.rs
{{ name~snake }}/: {{ name~snake }}.py
